--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,11 +14,11 @@
             android:id="@+id/app_bar"
             layout="@layout/app_bar" />
 
-        <tabs.SlidingTabLayout
+        <views.SlidingTabLayout
             android:id = "@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        </tabs.SlidingTabLayout>
+        </views.SlidingTabLayout>
 
         <android.support.v4.view.ViewPager
             android:id = "@+id/pager"
