--- a/app/src/main/res/layout/activity_sub.xml
+++ b/app/src/main/res/layout/activity_sub.xml
@@ -1,17 +1,31 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<views.LayoutCustom xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="napatskyf.materialdesing.activities.SubActivity">
+    tools:context=".activities.ActivityTouchEvent">
 
-    <include android:id="@+id/app_bar"
-        layout="@layout/app_bar"></include>
 
-    <TextView
-        android:layout_below="@id/app_bar"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <include
+            android:id="@+id/app_bar"
+            layout="@layout/app_bar" />
+    </RelativeLayout>
+
+
+
+
+    <views.ViewCustom
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/background_dark"
+        android:padding="16dp"
+        android:text="My View"
+        android:textColor="@android:color/white" />
 
-        android:text="Hello"/>
-</RelativeLayout>
+
+</views.LayoutCustom>
